--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,82 @@
-<pre>
-颜色搭配
-http://www.colorcombos.com/color-schemes/135/ColorCombo135.html
+<div class="content">
+<div class="ct1">
+<div class="ct2">
+<!--star-->
+<div class="container" id="idTransformView"> 
+<ul class="slider" id="idSlider"> 
+<li><img src="/assets/banner.jpg"/></li> 
+<li><img src="/assets/banner2.jpg"/></li> 
+<li><img src="/assets/banner.jpg"/></li> 
+<li><img src="/assets/banner2.jpg"/></li> 
+</ul> 
+<ul class="num" id="idNum"> 
+<li>1</li> 
+<li>2</li> 
+<li>3</li> 
+<li>4</li> 
+</ul> 
+</div>
+<!--end-->
+<div class="cont" style="margin-top:20px; overflow:hidden;">
+<div class="left">
+<div class="left1"><h3><img src="/assets/bar_red.png" /></h3>
+<ul>
+<li><img src="/assets/pic.jpg" /></li>
+<li><img src="/assets/pic2.jpg" /></li>
+</ul>
+</div>
+<div class="left2"><h3><img src="/assets/bar_green.png" /></h3>
+<ul>
+<li><a href="#" title="健康咨询服务内容健康咨询服务">健康咨询服务内容健康咨询服务</a></li>
+<li><a href="#" title="健康咨询服务内容健康咨询服务">健康咨询服务内容健康咨询服务</a></li>
+<li><a href="#" title="健康咨询服务内容健康咨询服务">健康咨询服务内容健康咨询服务</a></li>
+<li><a href="#" title="健康咨询服务内容健康咨询服务">健康咨询服务内容健康咨询服务</a></li>
+</ul>
+</div>
+<p style="margin-left:25px; margin-top:30px;"><img src="/assets/zxun.jpg" /></p>
+</div>
+<div class="middle">成都市博康生物药业有限公司，是一家成立于2003年6月，至今
+已有9个年头的保健品企业，我公司的保健产品主要是以鹿茸、灵芝、
+人参、虫草等名贵中药研发而成，其中，最新研发的保健产品，“鹿
+茸灵芝”胶囊，对于增强免疫力，提高缺氧耐受力，具有尤为突出
+的神奇效果，越来越被广大消费者所青睐，销量一路领先。 我公司
+的经营宗旨是“质量至上，客户至上”， 公司将一如既往地实行严
+格科学管理、完善的销售服务和高效、灵活的运作方针，继续与新
+老朋友合作，坚持双赢原则，互惠互利。建立稳固的、密集的营销
+网络，为开拓公司的美好明天而携手共进！
+<p style="margin-top:15px;"><img src="/assets/banner2.jpg" /></p>
+</div>
+<div class="right">
+<div class="right1"><h3><img src="/assets/bar_red01.png" /></h3>
+<ul>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态 2011-12-12</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+<li><a href="#" title="2012春节放假通知公司动态">2012春节放假通知公司动态</a></li>
+</ul>
+<p align="right"><a href="#" title="更多">更多>></a></p>
+</div>
 
-Omero Logo 颜色：cc0066
-</pre>
-<%= link_to "图片处理", '/home/img' %><br/>
-<%= link_to "幻灯片导航", '/home/slide_nav' %><br/>
-<%= link_to "Jquery+Image导航", '/home/nav_img_and_jquery' %><br/>
-<%= link_to "Jquery+Image导航2", '/home/nav_img_and_jquery2' %><br/>
+<div class="right2"><h3><img src="/assets/bar_Blue.png" /></h3>
+<ul class="pist">
+<li><img src="/assets/zhyh.jpg" />
+<p align="center">食品许可证</p>
+</li>
+<li><img src="/assets/zhyh.jpg" />
+<p align="center">食品许可证</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+ </div>
+</div>
+</div>
+
+<!---end-->
