--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -33,7 +33,7 @@ body{ background:url(<%=asset_path "back0.jpg" %>); font-size:12px;}
 /*************index*****/
 .content{ border:1px solid #000; width:990px; margin:0 auto; background:#F9E1B1; padding:2px; }
 .ct1{ border:1px solid #7C5B00; background:#F4D26E; padding:2px;}
-.ct2{ border:1px solid #CCAB68; background:#fff; padding:2px; overflow:hidden; height:1000px;}
+.ct2{ border:1px solid #CCAB68; background:#fff; padding:2px; overflow:hidden;}
 
 <!--图片切换css-->
 .container, .container *{margin:0; padding:0;} 
