--- a/app/views/pages/_comment.html.erb
+++ b/app/views/pages/_comment.html.erb
@@ -5,7 +5,7 @@
 .title22{ position:absolute; right:15px; top:20px; color:#fff;}
 .title22 a{ text-decoration:none; color:#fff;}
 .title22 a:hover{ text-decoration:underline;}
-.map{ position:absolute; top:216px; left:386px;}
+.map{ position:absolute; top:150px; left:386px;}
 .map p{ margin-top:14px;}
 .textnn{ height:38px; line-height:41px; padding:4px; width:247px;background:url(<%=asset_path("textbg.jpg")%>); border:none;}
 .textnn2{ width:247px;background:url(<%=asset_path("textbg2.jpg")%>); border:none; width:255px; height:96px; padding-left:4px; padding-top:4px; resize:none}
@@ -17,8 +17,8 @@
 <div class="ct1">
 <div class="ct2">
 <div class="cont" style="overflow:hidden; position:relative;">
-<div class="title">雁过留声</div>
-<span class="title22"><a href="#" title="首页">首页</a>>雁过留声</span>
+<div class="title">在线留言</div>
+<span class="title22"><a href="/">首页</a> > 在线留言</span>
 <div class="map">
 <p><input type="text"  class="textnn" value="name" /></p>
 <p><input type="text"  class="textnn"  value="......"/></p>
