--- a/app/views/pages/_merchants.html.erb
+++ b/app/views/pages/_merchants.html.erb
@@ -46,7 +46,7 @@ label{ float:left; width:60px; text-align:right;}
 <div class="ableft"><img src="/assets/leftico.jpg" /></div>
 <div class="about-middle">
 <div class="titable"><h3>招商加盟</h3>
-<span class="index">首页>招商加盟</span>
+<span class="index"><a href="/">首页</a> > 招商加盟</span>
 </div>
 <div class="aboutpic">
 <ul>
