--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -4,7 +4,7 @@
 .titable{ border-bottom:1px solid #60331F; position:relative; height:30px;}
 .titable h3{ color:#60331F; font-weight:bold; font-size:26px;}
 .index{ position:absolute; right:4px; top:5px; display:block;}
-.aboutpic{ margin-top:10px; overflow:hidden;}
+.aboutpic{ float: left; margin-top:10px; overflow:hidden;}
 .aboutpic p{ float:left;}
 .aboutzi{ margin-left:10px; width:300px; line-height:22px;}
 .fenlei{ float:left; margin-left:10px; width:210px;}
@@ -19,61 +19,36 @@
 <div class="ct1">
 <div class="ct2">
 <!--star-->
-<div class="container" id="idTransformView"> 
-<ul class="slider" id="idSlider"> 
-<li><img src="/assets/banner.jpg"/></li> 
-<li><img src="/assets/banner2.jpg"/></li> 
-<li><img src="/assets/banner.jpg"/></li> 
-<li><img src="/assets/banner2.jpg"/></li> 
-</ul> 
-<ul class="num" id="idNum"> 
-<li>1</li> 
-<li>2</li> 
-<li>3</li> 
-<li>4</li> 
-</ul> 
-</div>
+    <%= render :partial => 'layouts/slider' %>
 <!--end-->
 <div class="cont" style="margin-top:20px; overflow:hidden; height:auto;">
-<div class="ableft"><img src="/assets/leftico.jpg" /></div>
-<div class="about-middle">
-<div class="titable"><h3>成都博康</h3>
-<span class="index">首页>成都博康</span>
-</div>
-<div class="aboutpic">
-<p style="width:332px;"><img src="/assets/picno1.jpg" /></p>
-<p class="aboutzi">成都市博康生物药业有限公司，是一家成立于2003
-年6月，至今已有9个年头的保健品企业，我公司的
-保健产品主要是以鹿茸、灵芝、人参、虫草等名贵
-中药研发而成，其中，最新研发的保健产品，“鹿
-茸灵芝”胶囊，对于增强免疫力，提高缺氧耐受力，
-具有尤为突出的神奇效果，越来越被广大消费者所
-青睐，销量一路领先。 我公司的经营宗旨是“质量
-至上，客户至上”， 公司将一如既往地实行严格科
-学管理、完善的销售服务和高效、灵活的运作方针，
-继续与新老朋友合作，坚持双赢原则，互惠互利。</p>
-<div class="fenlei">
-<ul>
-<li>关于成都博康</li>
-<li>企业荣誉</li>
-<li>领导致辞</li>
-</ul>
-<h3 class="titab">相关内容</h3>
-<dl class="neilist">
-<dt><a href="#" title=">>对癌症细胞有抑制作用">>>对癌症细胞有抑制作用</a></dt>
-<dt><a href="#" title=">>提高人体免疫能力">>>提高人体免疫能力</a></dt>
-<dt>>><a href="#" title="对癌症细胞有抑制作用">对癌症细胞有抑制作用</a></dt>
-<dt>>><a href="#" title="提高人体免疫能力">提高人体免疫能力</a></dt>
-<dt>>><a href="#" title="破壁灵芝孢子粉胶囊能提高细">破壁灵芝孢子粉胶囊能提高细......</a> </dt>
-</dl>
+    <div class="ableft"><img src="/assets/leftico.jpg" /></div>
+    <div class="about-middle">
+        <div class="titable"><h3>成都博康</h3><span class="index"><a href="/">首页</a> > 成都博康</span></div>
+        <div class="aboutpic">
+            <p style="width:332px;"><img src="/assets/picno1.jpg" /></p>
+            <p class="aboutzi">
+                <%= @page.body %>
+            </p>
+            <p style="margin-top:15px;"><img src="images/banner_0.jpg" /></p>
+        </div>
+        <div class="fenlei">
+            <ul>
+            <li>关于成都博康</li>
+            <li>企业荣誉</li>
+            <li>领导致辞</li>
+            </ul>
+            <h3 class="titab">相关内容</h3>
+            <dl class="neilist">
+            <% NewsItem.recent(4, 4, false).each do |item| %>
+              <dt><%= link_to ">> #{item.title.truncate(16)}", news_item_path(item) %></dt>
+            <% end %>
+            </dl>
 
-</div>
-</div>
+        </div>
+    </div>
 </div>
 
 </div>
-
-
- </div>
 </div>
 </div>
