--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <b>Name:</b>
-  <%= @product_item.name %>
+  <%= @product_item.title %>
 </p>
 
 <p>
@@ -18,16 +18,6 @@
 <p>
   <b>Price:</b>
   <%= @product_item.price %>
-</p>
-
-<p>
-  <b>Image url:</b>
-  <%= @product_item.image_url %>
-</p>
-
-<p>
-  <b>Is visible:</b>
-  <%= @product_item.is_visible %>
 </p>
 
 
