--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -17,10 +17,10 @@
 <div class="cont" style="overflow:hidden; position:relative;">
 <div class="title">联系我们</div>
 <span class="title22"><a href="/">首页</a> > 联系我们</span>
-<div class="map"><h3>成都博康生物药业有限公司</h3>
-<p>地    址：成都市成华区万兴街8号附40号<br />
-服务热线：4006-818-278<br />
-网    址：www.cdbokang.com</p>
+<div class="map"><h3><%= $sites[:site_name]%></h3>
+<p>地    址：<%= $sites[:company_address]%><br />
+服务热线：<%= $sites[:site_phone]%><br />
+网    址：<%= $sites[:site_domain]%></p>
 </div></div>
 
 
