--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -1,25 +1,46 @@
+<%#encoding: utf-8 %>
+<% title "产品介绍" %>
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Product cate:</b>
-  <%= @product_item.product_cate %>
-</p>
+<style type="text/css">
+.about-middle{ margin-left:25px;overflow:hidden; float:left; width:870px;}
+.ableft{ float:left; width:79px;}
+.titable{ border-bottom:1px solid #60331F; position:relative; height:30px;}
+.titable h3{ color:#60331F; font-weight:bold; font-size:26px;}
+.index{ position:absolute; right:4px; top:5px; display:block;}
+.aboutpic{ margin-top:30px; overflow:hidden; padding:16px; float:left; background:url(images/proudbg.jpg) no-repeat; width:378px; height:342px;}
+.aboutpic li a,.list1 li a{ text-decoration:none; color:#60331F;}
+.aboutpic li a:hover,.list1 li a:hover{ text-decoration:underline; color:#60331F;}
+.aboutpic li{ margin:8px 0;}
+.newslist{ float:left; margin-left:15px; margin-top:10px; background:url(images/jsbg.jpg) no-repeat; height:318px; padding:8px 8px 0 6px; line-height:22px; width:261px;}
+.textn{ height:24px; height:24px; float:left;}
+label{ float:left; width:60px; text-align:right;}
+.aboutpic li{ overflow:hidden; width:146px; float:left; margin:12px 10px;}
+.product{ border:1px solid #e9e9e9; padding:2px; width:140px;}
+.aboutpic2{ float:left; margin-left:10px;margin-top:30px; line-height:30px; font-size:16px; font-weight:bold; width:423px; font-family:"微软雅黑"; color:#424242;}
+.title{ text-align:center;}
+</style>
 
-<p>
-  <b>Name:</b>
-  <%= @product_item.title %>
-</p>
+<div class="content">
+<div class="ct1">
+<div class="ct2">
+<div class="cont" style="margin-top:20px; overflow:hidden; height:auto;">
+<div class="ableft"><img src="images/leftico.jpg" /></div>
+<div class="about-middle">
+<div class="titable"><h3>产品介绍</h3>
+  <span class="index"><a href="/">首页</a> > 产品介绍</span></div>
+</div>
+<div class="aboutpic">
+  <%= image_tag(@product_item.image_path), :width => '340px' %>
+<h3 class="title">[[<%= @product_item.title %>]]</h3>
+</div>
+<div class="aboutpic2">
+     <%= @product_item.description %>
+</div>
+</div>
 
-<p>
-  <b>Description:</b>
-  <%= @product_item.description %>
-</p>
+</div>
+ </div>
+</div>
+</div>
 
-<p>
-  <b>Price:</b>
-  <%= @product_item.price %>
-</p>
-
-
-<%= link_to 'Edit', edit_product_item_path(@product_item) %> |
-<%= link_to 'Back', product_items_path %>
