--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -1,4 +1,4 @@
-
+<%#encoding: utf-8 %>
 *{ margin:0; padding:0;}
 ul,li{ list-style:none;}
 img{ border:none;}
@@ -20,9 +20,6 @@ body{ background:url(<%=asset_path "back0.jpg" %>); font-size:12px;}
 .menu li a{ text-decoration:none; font-weight:bold; color:#FFF; font-size:14px;}
 .menu li a:hover{font-weight:bold; color:#FFF; background:url(<%=asset_path "current.gif" %>) no-repeat 0 -6px; width:67px; height:54px; display:block;}
 .current{ background:url(<%=asset_path "current.gif" %>) no-repeat 0 -6px; width:67px; height:54px; margin-top:15px;}
-
-
-
 .footer{ background:url(<%=asset_path "bottombg.jpg" %>) repeat-x; height:117px; padding-top:15px; overflow:hidden; width:995px;}
 .logobt{ background:url(<%=asset_path "logo2.jpg" %>); width:284px; height:90px; float:left; }
 .fotter2{ float:left; margin-left:60px; margin-top:20px; line-height:20px; color:#FFF;}
@@ -35,7 +32,7 @@ body{ background:url(<%=asset_path "back0.jpg" %>); font-size:12px;}
 .ct1{ border:1px solid #7C5B00; background:#F4D26E; padding:2px;}
 .ct2{ border:1px solid #CCAB68; background:#fff; padding:2px; overflow:hidden;}
 
-<!--图片切换css-->
+/***********img slider css-**/
 .container, .container *{margin:0; padding:0;} 
 
 .container{width:976px; height:348px; overflow:hidden;} 
@@ -70,7 +67,7 @@ body{ background:url(<%=asset_path "back0.jpg" %>); font-size:12px;}
     font-weight: bold; 
 } 
 
-<!---end-->
+/***********img slider end -**/
 
 .cont{ overflow:hidden; clear:both; }
 .left,.middle,.right{ float:left;}
@@ -91,15 +88,15 @@ body{ background:url(<%=asset_path "back0.jpg" %>); font-size:12px;}
 .right2 li{ border:1px solid #e9e9e9; padding:2px; width:163px; margin:8px 0;}
 .pist{ margin:10px 0;}
 
- .highlight { color:#c30; }
-  .dimmed { color:#888; }
+.highlight { color:#c30; }
+.dimmed { color:#888; }
 
-  .info { background:#f8f8f8; color:#666; padding:10px; margin-bottom:0.5em; font-size:91.7%; }
+.info { background:#f8f8f8; color:#666; padding:10px; margin-bottom:0.5em; font-size:91.7%; }
 
-  #notice { background:#efe; color:#040; border:2px #484 solid; padding:10px; margin-bottom:1em; }
-  .important { background:#ffe; color:#440; border:2px #884 solid; padding:10px; margin-bottom:1em; }
-  .warning { background:#fee; color:#400; border:2px #844 solid; padding:10px; margin-bottom:1em; }
+#notice { background:#efe; color:#040; border:2px #484 solid; padding:10px; margin-bottom:1em; }
+.important { background:#ffe; color:#440; border:2px #884 solid; padding:10px; margin-bottom:1em; }
+.warning { background:#fee; color:#400; border:2px #844 solid; padding:10px; margin-bottom:1em; }
 
-  .float_left { float:left; display:inline; margin-right:1em; margin-bottom:0.15em; }
-  .float_right { float:right; display:inline; margin-left:1em; margin-bottom:0.15em; }
-  .center { display:block; text-align:center; margin:0.5em auto; }
+.float_left { float:left; display:inline; margin-right:1em; margin-bottom:0.15em; }
+.float_right { float:right; display:inline; margin-left:1em; margin-bottom:0.15em; }
+.center { display:block; text-align:center; margin:0.5em auto; }
