--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<%#encoding: utf-8 %>
 <!DOCTYPE html> 
 <html> 
 <head>
@@ -13,11 +14,6 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
-  <script type="text/javascript">
-
-  </script>
-
 </head> 
  
 <body> 
