--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -15,7 +15,7 @@
 .textn{ height:24px; height:24px; float:left;}
 label{ float:left; width:60px; text-align:right;}
 .aboutpic li{ overflow:hidden; width:330px; float:left; margin:12px 10px;}
-.product{ border:1px solid #e9e9e9; padding:2px; width:330px;}
+.product{ border:1px solid #e9e9e9; padding:2px; width:400px; height: 400px; display: block;}
 </style>
 
 <div class="content">
