--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -31,7 +31,7 @@ label{ float:left; width:60px; text-align:right;}
   <span class="index"><a href="/">首页</a> > 产品介绍</span></div>
 </div>
 <div class="aboutpic">
-  <%= image_tag(@product_item.image_path), :width => '340px' %>
+  <%= image_tag(@product_item.image_path, :width => '340px') %>
 <h3 class="title">[[<%= @product_item.title %>]]</h3>
 </div>
 <div class="aboutpic2">
