--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -22,17 +22,18 @@ label{ float:left; width:60px; text-align:right;}
 </style>
 
 <div class="content">
-<div class="ct1">
-<div class="ct2">
-<div class="cont" style="margin-top:20px; overflow:hidden; height:auto;">
-<div class="ableft"><img src="images/leftico.jpg" /></div>
-<div class="about-middle">
-<div class="titable"><h3>产品介绍</h3>
-  <span class="index"><a href="/">首页</a> > 产品介绍</span></div>
-</div>
-<div class="aboutpic">
-  <%= image_tag(@product_item.image_path, :width => '340px') %>
-<h3 class="title">[[<%= @product_item.title %>]]</h3>
+  <div class="ct1">
+    <div class="ct2">
+      <div class="cont" style="margin-top:20px; overflow:hidden; height:auto;">
+        <div class="ableft"><img src="images/leftico.jpg" /></div>
+      <div class="about-middle">
+        <div class="titable"><h3>产品介绍</h3>
+          <span class="index"><a href="/">首页</a> > 产品介绍</span>
+        </div>
+      </div>
+  <div class="aboutpic">
+    <%= image_tag(@product_item.image_path, :width => '340px') %>
+    <h3 class="title">[[<%= @product_item.title %>]]</h3>
 </div>
 <div class="aboutpic2">
      <%= @product_item.description.html_safe unless @product_item.description.blank?  %>
@@ -42,5 +43,3 @@ label{ float:left; width:60px; text-align:right;}
 </div>
  </div>
 </div>
-</div>
-
