--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -11,7 +11,7 @@
 .aboutpic li a,.list1 li a{ text-decoration:none; color:#60331F;}
 .aboutpic li a:hover,.list1 li a:hover{ text-decoration:underline; color:#60331F;}
 .aboutpic li{ margin:8px 0;}
-.newslist{ float:left; margin-left:15px; margin-top:10px; background:url(images/jsbg.jpg) no-repeat; height:318px; padding:8px 8px 0 6px; line-height:22px; width:261px;}
+.newslist{ float:left; margin-left:15px; margin-top:10px; background:url(/assets/jsbg.jpg) no-repeat; height:318px; padding:8px 8px 0 6px; line-height:22px; width:261px;}
 .textn{ height:24px; height:24px; float:left;}
 label{ float:left; width:60px; text-align:right;}
 .aboutpic li{ overflow:hidden; width:330px; float:left; margin:12px 10px;}
@@ -27,6 +27,8 @@ label{ float:left; width:60px; text-align:right;}
 <div class="titable"><h3>产品介绍</h3>
   <span class="index"><a href="/">首页</a> > 产品介绍</span></div>
 </div>
+
+
 <div class="aboutpic">
 <ul>
 
@@ -39,10 +41,9 @@ label{ float:left; width:60px; text-align:right;}
 
 </ul>
 </div>
-</div>
+
 
 </div>
-
 
  </div>
 </div>
