--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -8,11 +8,11 @@
 .titable{ border-bottom:1px solid #60331F; position:relative; height:30px;}
 .titable h3{ color:#60331F; font-weight:bold; font-size:26px;}
 .index{ position:absolute; right:4px; top:5px; display:block;}
-.aboutpic{ margin-top:30px; overflow:hidden; padding:16px; float:left; background:url(images/proudbg.jpg) no-repeat; width:378px; height:342px;}
+.aboutpic{ margin-top:30px; overflow:hidden; padding:16px; float:left; background:url(/assets/proudbg.jpg) no-repeat; width:378px; height:342px;}
 .aboutpic li a,.list1 li a{ text-decoration:none; color:#60331F;}
 .aboutpic li a:hover,.list1 li a:hover{ text-decoration:underline; color:#60331F;}
 .aboutpic li{ margin:8px 0;}
-.newslist{ float:left; margin-left:15px; margin-top:10px; background:url(images/jsbg.jpg) no-repeat; height:318px; padding:8px 8px 0 6px; line-height:22px; width:261px;}
+.newslist{ float:left; margin-left:15px; margin-top:10px; background:url(/assets/jsbg.jpg) no-repeat; height:318px; padding:8px 8px 0 6px; line-height:22px; width:261px;}
 .textn{ height:24px; height:24px; float:left;}
 label{ float:left; width:60px; text-align:right;}
 .aboutpic li{ overflow:hidden; width:146px; float:left; margin:12px 10px;}
@@ -25,7 +25,7 @@ label{ float:left; width:60px; text-align:right;}
   <div class="ct1">
     <div class="ct2">
       <div class="cont" style="margin-top:20px; overflow:hidden; height:auto;">
-        <div class="ableft"><img src="images/leftico.jpg" /></div>
+        <div class="ableft"><img src="/assets/leftico.jpg" /></div>
       <div class="about-middle">
         <div class="titable"><h3>产品介绍</h3>
           <span class="index"><a href="/">首页</a> > 产品介绍</span>
